<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/sidebar_item_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
    </group>
    <item android:title="@string/trainer">
        <menu>
            <group>

            </group>
        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <group>
                <item
                    android:id="@+id/sidebar_item_profile"
                    android:icon="@drawable/baseline_person_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/sidebar_item_settings"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>
</menu>