<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adapter_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/input"
    android:padding="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/gym_buddy_logo"
        android:contentDescription="@string/user_photo"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/name"
            style="@style/Theme.Typography.BodyLarge"
            android:fontFamily="sans-serif-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textSecondary"
            android:text="@string/app_name"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textSecondary"
            android:text="@string/contract"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contract_startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:text="@string/start_date"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/contract_endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:text="@string/end_date"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_arrow_forward_24"
        app:tint="@color/primaryLightColor"
        android:contentDescription="@string/arrow_right" />
</LinearLayout>