<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="32dp"
    android:paddingHorizontal="24dp"
    app:showDivider="middle"
    app:dividerDrawable="@drawable/divider_32"
    app:flexDirection="column"
    app:alignItems="center"
    app:justifyContent="space_between"
    tools:context=".fragments.WelcomeFragment">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/Theme.Typography.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/primaryColor" />

        <TextView
            style="@style/Theme.Typography.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="@color/primaryColor" />
    </LinearLayout>

    <!-- IMAGE -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_flexGrow="1"
        android:contentDescription="@string/gym_buddy_logo"
        android:src="@drawable/gym_buddy_logo"/>

    <!-- BUTTONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            style="@style/Theme.Button.Secondary"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/login_button"
            style="@style/Theme.Button.Primary"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>
</com.google.android.flexbox.FlexboxLayout>