<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    tools:context=".fragments.trainer.trainingPlans.TrainerAddClientToPlanModalFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/client"
        android:labelFor="@+id/client">

        <AutoCompleteTextView
            android:id="@+id/client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/edit_text_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/end_date"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="@style/Theme.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/submit_button"
            style="@style/Theme.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"/>


    </LinearLayout>

</LinearLayout>