<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="32dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.RegisterFragment">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/gym_buddy_logo"
                android:src="@drawable/gym_buddy_logo" />

            <TextView
                style="@style/Theme.Typography.DisplaySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <TextView
            style="@style/Theme.Typography.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:text="@string/set_up_your_account"/>
    </LinearLayout>

    <!-- REGISTER FORM -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_code"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginVertical="8dp">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/password_progress_bar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:max="100"/>

            <ImageButton
                android:id="@+id/password_requirements"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:background="@null"
                android:src="@drawable/baseline_question_mark_24"
                android:contentDescription="@string/password"/>
        </LinearLayout>


        <TextView
            android:id="@+id/message"
            style="@style/Theme.Typography.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/submit_button"
            style="@style/Theme.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>