<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.admin.AdminHomeFragment">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <!-- WELCOME BACK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Theme.Typography.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"/>

                <TextView
                    android:id="@+id/name"
                    style="@style/Theme.Typography.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>

                <TextView
                    android:id="@+id/role"
                    style="@style/Theme.Typography.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/gym_buddy_logo"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/avatar"/>
        </LinearLayout>

        <!-- GENERATE USER -->
        <Button
            android:id="@+id/generate_user"
            style="@style/Theme.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_new_user"
            android:layout_marginTop="54dp"/>
    </LinearLayout>
</LinearLayout>